--- a/public/js/components/SearchResult/index.less
+++ b/public/js/components/SearchResult/index.less
@@ -9,8 +9,9 @@
     text-align: center;
 }
 
-@media only screen and (hover: none) and (pointer: coarse) and (orientation:portrait) {
+@media only screen and (hover: none) and (orientation: portrait), (pointer: coarse) or (pointer: none) {
     .searchResult {
+        font-size: 2rem;
         width: 100%;
     }
 }
