--- a/public/js/components/SearchResult/index.less
+++ b/public/js/components/SearchResult/index.less
@@ -7,6 +7,9 @@
     padding: 20px;
     cursor: pointer;
     text-align: center;
+    height: 3rem;
+    display: flex;
+    align-items: center;
 }
 
 @media only screen and (hover: none) and (orientation: portrait), (pointer: coarse) or (pointer: none) {
