--- a/public/js/components/CityList/index.less
+++ b/public/js/components/CityList/index.less
@@ -10,6 +10,30 @@
     padding: 20px;
     font-size: x-large;
   }
+
+  &__favorites {
+    padding: 10px;
+    display: flex;
+    flex-wrap: wrap;
+
+    &__item {
+      background: lightgray;
+      width: 300px;
+      height: 3rem;
+      border-radius: 15px;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
+      margin: 1rem;
+      padding: 0 1rem;
+      cursor: pointer;
+
+      &__close {
+        margin-left: auto;
+      }
+    }
+  }
   
   &__search {
     padding: 20px;
