--- a/public/js/components/SearchResult/index.less
+++ b/public/js/components/SearchResult/index.less
@@ -10,6 +10,11 @@
     height: 3rem;
     display: flex;
     align-items: center;
+
+    &__favorite{
+        margin-left: auto;
+        height: 100%;
+    }
 }
 
 @media only screen and (hover: none) and (orientation: portrait), (pointer: coarse) or (pointer: none) {
