--- a/public/js/components/City5DayForecast/index.less
+++ b/public/js/components/City5DayForecast/index.less
@@ -1,6 +1,34 @@
 /* styles.less */
-.myComponent {
-  background-color: #f0f0f0;
-  padding: 10px;
-  border: 1px solid #ccc;
+.forecast {
+  display: flex;
+  flex-direction: column;
+
+  &__content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-grow: 1;
+
+    &__name {
+      flex: 1;
+    }
+
+    &__date {
+      flex: 1;
+    }
+
+    &__picture {
+      width: 300px;
+      flex: 1;
+    }
+
+    &__temperature {
+      flex: 1;
+    }
+
+    &__description {
+      flex: 1;
+    }
+  }
+  &__footer{}
 }
