--- a/public/js/components/City5DayForecast/index.less
+++ b/public/js/components/City5DayForecast/index.less
@@ -30,5 +30,23 @@
       flex: 1;
     }
   }
-  &__footer{}
+  &__footer{
+    display: flex;
+    text-align: center;
+    border-top: 1px dashed gray;
+    margin-top: 20px;
+    padding: 20px;
+
+    &__humidity {
+      flex: 1;
+    }
+
+    &__wind-speed {
+      flex: 1;
+    }
+
+    &__pressure {
+      flex: 1;
+    }
+  }
 }
