Changed favorite item button

--- a/public/js/components/FavoriteCity/index.less
+++ b/public/js/components/FavoriteCity/index.less
@@ -1,17 +1,19 @@
   .favorite__item {
     background: lightgray;
-    width: 300px;
+    width: fit-content;
     height: 3rem;
-    border-radius: 15px;
+    border-radius: 25px;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
     margin: 1rem;
-    padding: 0 1rem;
+    padding: 0 0.5rem 0 1rem;
     cursor: pointer;
     
     &__close {
         margin-left: auto;
+        height: 2rem;
+        padding-left: 2rem;
     }
 }
