--- a/public/js/components/FavoriteCity/index.less
+++ b/public/js/components/FavoriteCity/index.less
@@ -11,7 +11,7 @@
     padding: 0 0.5rem 0 1rem;
     cursor: pointer;
     
-    &__close {
+    &__remove {
         margin-left: auto;
         height: 2rem;
         padding-left: 2rem;
