Fixed height for mobile browsers

--- a/public/js/components/City5DayForecast/index.less
+++ b/public/js/components/City5DayForecast/index.less
@@ -5,7 +5,7 @@
 .forecast {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  min-height: 100dvh;
 
   &__content {
     display: flex;
