--- a/public/js/components/City5DayForecast/index.less
+++ b/public/js/components/City5DayForecast/index.less
@@ -1,6 +1,11 @@
 @icon-height: 3rem;
 @weather-description-distance: 1rem;
 
+/* for the carousel item to take the whole width instead of 90% */
+div[class^="Carousel__Rail"] {
+  grid-template-columns: repeat(5, 100%);
+}
+
 /* styles.less */
 .forecast {
   display: flex;
