--- a/public/js/components/TabsComponent/index.less
+++ b/public/js/components/TabsComponent/index.less
@@ -25,3 +25,9 @@
         border-top: none;
     }
 }
+
+@media only screen and (hover: none) and (orientation: portrait), (pointer: coarse) or (pointer: none) {
+    .tabs-container {
+        font-size: 2.5rem;
+    }
+}
