--- a/public/js/components/SearchResult/index.less
+++ b/public/js/components/SearchResult/index.less
@@ -29,3 +29,9 @@
         width: 100%;
     }
 }
+
+@media only screen and (hover: none) and (orientation: portrait), (pointer: coarse) or (pointer: none) {
+    .searchResult {
+        font-size: 3rem;
+    }
+}
