--- a/public/js/components/FavoriteCity/index.less
+++ b/public/js/components/FavoriteCity/index.less
@@ -10,6 +10,7 @@
     margin: 1rem;
     padding: 0 0.5rem 0 1rem;
     cursor: pointer;
+    font-size: 1.5rem;
     
     &__remove {
         margin-left: auto;
