--- a/public/js/components/FavoriteCity/index.less
+++ b/public/js/components/FavoriteCity/index.less
@@ -24,6 +24,7 @@
       height: 4.5rem;
       border-radius: 40px;
       padding-left: 1.5rem;
+      font-size: 3rem;
 
       &__remove {
         height: 3rem;
